--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
 
-    <style name="Theme.DictionaryApp" parent="android:Theme.Material.Light.NoActionBar" />
+<resources>
+    <!-- Base application theme (Material 3) -->
+    <style name="Theme.DictionaryApp" parent="android:Theme.Material.Light.NoActionBar">
+        <!-- Your existing attributes -->
+        <item name="android:statusBarColor">@color/primary</item>
+        <item name="android:navigationBarColor">@color/primary</item>
+    </style>
+
+    <!-- Splash screen theme (compatible with Material 2) -->
+    <style name="SplashTheme" parent="Theme.DictionaryApp">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
 </resources>
+<!--<resources>-->
+
+<!--    <style name="Theme.DictionaryApp" parent="android:Theme.Material.Light.NoActionBar" />-->
+<!--</resources>-->
